fix main overflow

--- a/src/app/styles/general.scss
+++ b/src/app/styles/general.scss
@@ -48,7 +48,6 @@ body {
 }
 
 main {
-  overflow: hidden;
   flex: 1;
 }
 
